# scivis-wrx

./: .gitignore  README.md  __init__.py  color_config.py  colors.py  elements.py  presets.py  pyproject.toml  requirements.txt  themes.py  utils.py
docs/: image_palettes.md
example/: color_example.py  color_naming_example.py  color_palette_generator.py  example.py  image_color_extraction.py  image_palette_example.py  show_all_colors.py
outputs/: color_extraction_summary.json  custom_colors.json
scivis_wrx/: __init__.py  colors.py  default_colors.json
