[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scivis-wrx"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A scientific visualization package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/scivis-wrx"
"Bug Tracker" = "https://github.com/yourusername/scivis-wrx/issues"

[tool.hatch.build.targets.wheel]
packages = ["scivis_wrx"] 