[project]
name = "scivis-wrx"
version = "0.1.0"
description = "Scientific Visualization Tools"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "contourpy>=1.3.2",
    "cycler>=0.12.1",
    "fonttools>=4.57.0",
    "kiwisolver>=1.4.8",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "packaging>=25.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pyparsing>=3.2.3",
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    "scipy>=1.15.2",
    "six>=1.17.0",
    "tzdata>=2025.2"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scivis_wrx"] 